partially completed hesder

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 
 #locationButton {
     height: 55px;
-    width: 250px;
+    width: 150px;
     /* background-color: green; */
     margin-left: 20px;
 
@@ -61,9 +61,9 @@
 
 #searchAreaDiv {
     height: 55px;
-    width: 550px;
+    width: 500px;
     /* background-color: green; */
-    margin-left: 20px;
+    margin-left: 10px;
 
     display: flex;
     align-items: center;
@@ -79,7 +79,7 @@
 
 #searchBarArea {
     height: 34px;
-    width: 350px;
+    width: 550px;
 }
 
 #searchButton {
@@ -96,4 +96,152 @@
     color: white;
     margin-right: 10px;
     
+}
+
+
+/* @media only screen and (max-width: 500px){
+    #searchAreaDiv {
+        background-color: green;
+    }
+} */
+
+
+
+
+
+
+#india{
+    /* background-color: pink; */
+    height: 50px;
+    width: 70px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+#tirangalogo{
+    height: 12px;
+    /* background-color: green; */
+    margin-top: 10px;
+    margin-left: 15px;
+}
+#en{
+    color: white;
+    margin-top: 10px;
+    margin-left:3px ;
+}
+#hellodev{
+    /* background-color: green; */
+    color: white;
+    text-decoration: none;
+    margin-left: 30px;
+}
+#order{
+    color: white;
+    text-decoration: none;
+    margin-left: 25px;
+}
+#cartlogo{
+    font-size: 20px;
+    color: white;
+    /* background-color: green; */
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
+#cart{
+    color: white;
+    margin-top: 30px;
+    margin-left: 2px;
+}
+#nav_header{
+    background-color:#232f3e ;
+    height: 39px;
+    width: 100%px;
+    display: flex;
+}
+#all{
+    color: white;
+    /* background-color: green; */
+    height: 30px;
+    width: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: solid;
+    margin-top: 5px;
+    text-decoration: none;
+}
+#threeline{
+    font-size: 30px;
+    margin-right: 2px;
+    text-decoration: none;
+}
+#mxplayer{
+    color: white;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#sell{
+    color: white;
+    width: 60px;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#giftcard{
+    color: white;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#amazonpay{
+    color: white;
+    width: 110px;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#buyagain{
+    color: white;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#amazonbasic{
+    color: white;
+    width: 120px;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#giftidea{
+    color: white;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#todaydeal{
+    color: white;
+    width: 110px;
+    /* background-color: blue; */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
